app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
  namespace: default
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "20Mi"
              cpu: "0.25"
            limits:
              memory: "400Mi"
              cpu: "1"
